--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
   <title>jQuery AutoCollapser Demo</title>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="jQuery.trackChanges.js"></script>
+  <script src="src/jQuery.trackChanges.js"></script>
 
   <style>
     .track-changes {
